# DataMind

./: .gitignore  CLAUDE.md  README.md  package-lock.json  pyproject.toml  serve.py  skills-lock.json
datamind/: __init__.py  config.py  errors.py  logging_setup.py  session_context.py
datamind/api/: app.py  debug.py  websocket.py
datamind/cli/: main.py
datamind/engine/: agent.py  assembly.py  cognition.py  describe.py  events.py  graph.py  langgraph_agent.py  lineage.py  llm.py  project.py  prompt.py  skill_state.py  skills.py  tools.py  usage.py
datamind/mcp/: server.py
docs/: debugging-runbook.md  testing-runbook.md
prompts/: archivist.md  code-reviewer.md  data-scientist.md  requirement-analyst.md
skills/: auto-archive.md  data-cleaning.md  data-exploration.md  feature-engineering.md  model-training.md  report-generation.md  requirement-discussion.md
tests/: conftest.py
tests/e2e/: conftest.py  test_full_skill_execution.py  test_interrupt_resume.py  test_workflows.py
tests/integration/: test_agent.py  test_api_extensions.py  test_lineage_integration.py  test_skill_migration.py
tests/unit/: test_api.py  test_assembly.py  test_cli.py  test_cognition.py  test_debug_endpoints.py  test_describe.py  test_events.py  test_graph.py  test_init.py  test_json_formatter.py  test_langgraph_agent.py  test_lineage.py  test_llm.py  test_mcp.py  test_project.py  test_prompt.py  test_skill_state.py  (+4 more)
web-ui/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+130 files in other folders)
